--- a/product3.html
+++ b/product3.html
@@ -8,55 +8,54 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div style="background-color: rgb(0, 0, 0); color: rgb(237, 225, 225); padding: 10px;">
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <div style="display: flex; align-items: center;">
-                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" style="width: 2.5cm; height: 2.5cm; margin-right: 1%;">
-                    <h1 style="margin: 0;">Sana Sana Babu Nani Online Store</h1>
+        <div class="header-container">
+            <div class="header-flex">
+                <div class="logo-title">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
+                    <h1>Sana Sana Babu Nani Online Store</h1>
                 </div>
-                <div style="display: flex; align-items: center;">
-                    <input type="text" id="search" name="search" placeholder="Search for products..." style="padding: 5px; width: 300px;">
-                    <button type="submit" style="padding: 5px 10px; margin-left: 10px;">Search</button>
-                    <nav style="color: rgb(255, 245, 245); padding-left: 10px;">
-                        <a href="login.html" style="color: rgb(255, 245, 245); margin-left: 10px;">Login</a> &nbsp; | &nbsp;
-                        <a href="carts.html" style="color: rgb(255, 245, 245);">My Carts</a>
+                <div class="search-login">
+                    <input type="text" id="search" name="search" placeholder="Search for products...">
+                    <button type="submit">Search</button>
+                    <nav>
+                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
             </div>
         </div>
     </header>
 
-    <nav style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245); padding: 10px;">
-        <a href="#home" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Home</a> &nbsp; | &nbsp;
+    <nav class="main-nav">
+        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
 
         <!-- Collection Dropdown -->
-        <details style="display: inline-block; color: rgb(255, 245, 245); padding: 5px;">
-            <summary style="cursor: pointer;"><u>Collection</u></summary>
-            <ul style="background-color: #fff; color: #000; list-style: none; padding: 0; margin: 0; border: 1px solid #ddd;">
-                <li><a href="#boy-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Boy Dress</a></li>
-                <li><a href="#girl-dress" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Girl Dress</a></li>
-                <li><a href="#new-arrival" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    New Arrival</a></li>
-                <li><a href="#best-seller" style="color: #000; padding: 10px; display: block; text-decoration: none;">
-                    Best Seller</a></li>
-                <li><a href="#toy" style="color: #000; padding: 10px; display: block; text-decoration: none;">Toy</a></li>
-            </ul>
-        </details>
+        <div class="dropdown">
+            <button class="dropbtn"><u>Collection</u></button>
+            <div class="dropdown-content">
+                <a href="#boy-dress">Boy Dress</a>
+                <a href="#girl-dress">Girl Dress</a>
+                <a href="#new-arrival">New Arrival</a>
+                <a href="#best-seller">Best Seller</a>
+                <a href="#toy">Toy</a>
+            </div>
+        </div>
 
         &nbsp; | &nbsp;
-        <a href="faqs.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">FAQs</a> &nbsp; | &nbsp;
-        <a href="contact.html" style="background-color: rgb(50, 48, 49); color: rgb(255, 245, 245);">Contact Us</a>
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
     <main style="padding: 10px; background-color: #c1c5c6;">
         <section id="product3">
-            <h2>Cute Baby Children's Socks Toddler Baby Kids Girls Solid Knee-High Socks Stockings Mid-Calf Length Princess Sock</h2>
-            <img src="Pictures/Socks.jpg" alt="Socks" style="width: 300px; height: 300px; margin-right: 20px;">
+            <h2>Cute Baby Children's Socks Toddler Baby Kids Girls Solid 
+                Knee-High Socks Stockings Mid-Calf Length Princess Sock</h2>
+            <img src="Pictures/Socks.jpg" alt="Socks" 
+            style="width: 300px; height: 300px; margin-right: 20px;">
             <p>Price: Rs. 300</p>
             <button>Add to Cart</button>
             <br><br>
@@ -66,14 +65,17 @@
                 The cute bow pattern and mid-calf length make these socks ideal for any outfit, 
                 giving your little one a fashionable look.</p>
             <ul>
-                <li><u>Sock Material:</u> 80% Cotton, 15% Nylon, 5% Spandex. Soft and breathable, ensuring comfort and durability.</li>
+                <li><u>Sock Material:</u> 80% Cotton, 15% Nylon, 5% Spandex. 
+                    Soft and breathable, ensuring comfort and durability.</li>
                 <li><u>Baby Girls Cute Socks:</u> Knee-high socks that stay up and stay put, 
                     perfect for completing any cute outfit.</li>
                 <li><u>Recommend Age:</u> Suitable for children aged 0-5 years, 
                     fitting over the calf or to the knee depending on leg length.</li>
-                <li><u>Princess Look:</u> Easily matches dresses, skirts, pants, shorts, rompers, and more.</li>
+                <li><u>Princess Look:</u> Easily matches dresses, skirts, pants, 
+                    shorts, rompers, and more.</li>
                 <li><u>Care & Service:</u> Hand/machine wash in cold water, drip dry. 
-                    Do not bleach. If not satisfied, contact us by email for a refund or replacement within 24 hours.</li>
+                    Do not bleach. 
+                    If not satisfied, contact us by email for a refund or replacement within 24 hours.</li>
                 <li><u>Unit Count:</u> 1.0</li>
             </ul>
             <h3>Specifications</h3>
