--- a/faqs.html
+++ b/faqs.html
@@ -9,173 +9,168 @@
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
+     <!--Bootsrap-->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-    <header>
+<header>
         <div class="header-container">
             <div class="header-flex">
                 <div class="logo-title">
                     <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
-                    <h1>Sana Sana Babu Nani Online Store</h1>
+                    <h1><b>Sana Sana Babu Nani Online Store</b></h1>
                 </div>
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
-                    <button type="submit" >Search</button>
-                    <div id="search-suggestions" class="suggestions-dropdown"></div>
+                    <button type="button" class="btn btn-primary">Search</button> 
+                    <div id="search-suggestions" class="suggestions-dropdown"></div>&nbsp;
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; |
-                        <a href="carts.html">My Carts</a>
+                        <div class="nav navbar-nav navbar-right">
+                            <a href="login.html"><span class="glyphicon glyphicon-user"></span></a> &nbsp;
+                            <a href="carts.html"><span class="glyphicon glyphicon-shopping-cart"></span><span class="badge">0</span></a>&nbsp;
+                        </div>
+
                     </nav>
                 </div>
             </div>
         </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
-    <label for="menu-toggle" class="hamburger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-    </label>
-    <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; <li class="separator">|</li>
-        <div class="dropdown">
-            <button class="dropbtn"><u>Collection</u></button>
-            <div class="dropdown-content">
-                <a href="boysdress.html">Boy Dress</a>
-                <a href="girlsdress.html">Girl Dress</a>
-                <a href="newarrival.html">New Arrival</a>
-                <a href="bestseller.html">Best Seller</a>
-                <a href="toy.html">Toy</a>
+
+
+
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>                        
+                </button>
+              </div>
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                  <li><a href="index.html">Home</a></li>
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Collection<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="boysdress.html">Boy Dress</a></li>
+                      <li><a href="girlsdress.html">Girl Dress</a></li>
+                      <li><a href="newarrival.html">New Arrival</a></a></li>
+                      <li><a href="bestseller.html">Best Seller</a></li>
+                      <li><a href="toy.html">Toy</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="faqs.html">FAQs</a></li>
+                  <li><a href="contact.html">Contact-Us</a></li>
+                </ul>
+              </div>
             </div>
-        </div>
-        &nbsp; <li class="separator">|</li> &nbsp;
-        <a href="faqs.html"><u>FAQs</u></a> &nbsp; <li class="separator">|</li> &nbsp;
-        <a href="contact.html"><u>Contact Us</u></a>
-    </nav>
+          </nav>
+
     </header>
 
     <main class="main-content">
         <section id="faqs">
             <h2>Frequently Asked Questions (FAQs)</h2>
 
-            <!-- FAQ Table 1 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>What payment methods do you accept?</strong></summary>
-                            <p>We accept various payment methods including credit/debit cards, 
-                                online banking, and mobile wallets.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>What payment methods do you accept?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">We accept various payment methods including credit/debit cards, online banking, and mobile wallets.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>How can I track my order?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">Once your order is shipped, you will receive a tracking number via email to check the status of your delivery.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>What is your return policy?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body">You can return products within 30 days of receiving them. Please ensure the items are in their original condition.</div>
+                    </div>
+                </div>
+                
+                
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>Do you offer international shipping?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse4" class="panel-collapse collapse">
+                        <div class="panel-body">Currently, we only offer shipping within Nepal. 
+                            International shipping is not available at this time.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>How can I contact customer support?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse5" class="panel-collapse collapse">
+                        <div class="panel-body">You can reach our customer support team through the <a href="contact.html">
+                            Contact Us</a> page on our website.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>What should I do if I receive a damaged product?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse6" class="panel-collapse collapse">
+                        <div class="panel-body">If you receive a damaged product, 
+                            please contact us immediately through the <a href="contact.html">
+                                Contact Us
+                            </a> page with your order details and photos of the damage.</div>
+                    </div>
+                </div>
 
-            <!-- FAQ Table 2 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>How can I track my order?</strong></summary>
-                            <p>Once your order is shipped, you will receive a 
-                                tracking number via email to check the status of your delivery.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse7">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>Can I change or 
+                                cancel my order after placing it?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse7" class="panel-collapse collapse">
+                        <div class="panel-body">Order changes or cancellations can be made within 
+                            1 hour of placing the order. 
+                            Please contact our customer support team as soon as possible.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse8">
+                        <h4 class="panel-title">
+                            <a><span class="glyphicon glyphicon-triangle-top"></span>Do you have a physical store?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse8" class="panel-collapse collapse">
+                        <div class="panel-body">Yes, our physical store is located at Basundhara, Kathmandu. 
+                            You can visit us during our opening hours: 7AM - 7PM.</div>
+                    </div>
+                </div>
 
-            <!-- FAQ Table 3 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>What is your return policy?</strong></summary>
-                            <p>You can return products within 30 days of receiving them. 
-                                Please ensure the items are in their original condition.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
-            <!-- FAQ Table 4 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>Do you offer international shipping?</strong></summary>
-                            <p>Currently, we only offer shipping within Nepal. 
-                                International shipping is not available at this time.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
-            <!-- FAQ Table 5 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>How can I contact customer support?</strong></summary>
-                            <p>You can reach our customer support team through the <a href="contact.html">
-                                Contact Us</a> page on our website.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
-            <!-- FAQ Table 6 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>
-                                What should I do if I receive a damaged product?</strong></summary>
-                            <p>If you receive a damaged product, 
-                                please contact us immediately through the <a href="contact.html">
-                                    Contact Us
-                                </a> page with your order details and photos of the damage.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
-            <!-- FAQ Table 7 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>Can I change or 
-                                cancel my order after placing it?</strong></summary>
-                            <p>Order changes or cancellations can be made within 
-                                1 hour of placing the order. 
-                                Please contact our customer support team as soon as possible.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
-            <!-- FAQ Table 8 -->
-            <table class="faq-table">
-                <tr>
-                    <td>
-                        <details>
-                            <summary><strong>Do you have a physical store?</strong></summary>
-                            <p>Yes, our physical store is located at Basundhara, Kathmandu. 
-                                You can visit us during our opening hours: 7AM - 7PM.</p>
-                        </details>
-                    </td>
-                </tr>
-            </table>
-            <br> <!-- Break between FAQs -->
-
+            </div>
         </section>
     </main>
 
